--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "commitizen": "^4.2.1",
     "copy-webpack-plugin": "^4.6.0",
     "cross-env": "^7.0.2",
+    "css-loader": "^5.0.0",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv-webpack": "^3.0.0",
     "enzyme": "^3.11.0",
@@ -59,7 +60,11 @@
     "jest-environment-enzyme": "^7.1.2",
     "jest-enzyme": "^7.1.2",
     "jest-extended": "^0.11.5",
+    "node-sass": "^4.14.1",
     "preload-webpack-plugin": "^3.0.0-beta.4",
+    "sass": "^1.27.0",
+    "sass-loader": "^10.0.3",
+    "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^4.2.2",
     "webpack": "^4.44.2",
     "webpack-bundle-analyzer": "^3.9.0",
@@ -70,6 +75,16 @@
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "jest": {
+    "testPathDirs": [
+      "<rootDir>/src"
+    ],
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "^.+\\.css$": "identity-obj-proxy",
+      "^.+\\.(ico|jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/__mocks__/fileMock.js"
     }
   }
 }
